--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2",
+    "next": "^15.5.7"
   },
   "devDependencies": {
     "typescript": "^5",
@@ -21,7 +21,7 @@
     "@tailwindcss/postcss": "^4",
     "tailwindcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "15.3.4",
+    "eslint-config-next": "^15.5.7",
     "@eslint/eslintrc": "^3"
   }
 }
